# NLBot

./: .env  .env.dev  LICENSE  README.md  bot.py  pyproject.toml
src/plugins/: help.py  menu.py
src/plugins/antirecall/: __init__.py  pyproject.toml
